--- a/config.json
+++ b/config.json
@@ -22,9 +22,9 @@
         75.89,
         93.75
     ],
-    "customurlscheme": "moodlemobile",
+    "customurlscheme": "spensapwo",
     "siteurl": "http://spensapwo.ip-dynamic.com/moodle",
-    "sitename": "",
+    "sitename": "SMPN 1 Purwantoro",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
