--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "cache_update_frequency_often": 1200000,
     "cache_update_frequency_sometimes": 3600000,
     "cache_update_frequency_rarely": 43200000,
-    "default_lang": "en",
+    "default_lang": "id",
     "languages": {
         "en": "English",
         "id": "Indonesian",
@@ -22,7 +22,7 @@
         75.89,
         93.75
     ],
-    "customurlscheme": "spensapwo",
+    "customurlscheme": "",
     "siteurl": "http://spensapwo.ip-dynamic.com/moodle",
     "sitename": "SMPN 1 Purwantoro",
     "multisitesdisplay": "",
