--- a/config.json
+++ b/config.json
@@ -22,8 +22,8 @@
         75.89,
         93.75
     ],
-    "customurlscheme": "",
-    "siteurl": "http://spensapwo.ip-dynamic.com/moodle",
+    "customurlscheme": "SMPN 1 Purwantoro",
+    "siteurl": "http://spensapwo.ip-dynamic.com/moodle/login/index.php",
     "sitename": "SMPN 1 Purwantoro",
     "multisitesdisplay": "",
     "skipssoconfirmation": true,
