--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
         93.75
     ],
     "customurlscheme": "",
-    "siteurl": "http://spensapwo.ip-dynamic.com/moodle",
+    "siteurl": "http://spensapwo.ip-dynamic.com/moodle/",
     "sitename": "SMPN 1 Purwantoro",
     "multisitesdisplay": "",
     "skipssoconfirmation": true,
