--- a/config.json
+++ b/config.json
@@ -22,11 +22,11 @@
         75.89,
         93.75
     ],
-    "customurlscheme": "",
+    "customurlscheme": "spensapwo",
     "siteurl": "http://spensapwo.ip-dynamic.com/moodle/",
     "sitename": "SMPN 1 Purwantoro",
     "multisitesdisplay": "",
-    "skipssoconfirmation": true,
+    "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
     "privacypolicy": "https:\/\/moodle.org\/mod\/page\/view.php?id=8148",
     "notificoncolor": "#f98012",
